Get alerts by http, count message as an alert
